# gml

./: .env.example  .gitignore  .pre-commit-config.yaml  COMMANDS_MACOS.txt  COPY_THIS_COMMAND.txt  Dockerfile.dev  FINAL_START.sh  Makefile  OLLAMA_QUICK_START.sh  PRODUCTION_CHANGES.md  QUICK_SETUP_MACOS.sh  QUICK_TEST.sh  README.md  RENDER_DEPLOY.md  RUN_NOW.sh  RUN_THIS_NOW.sh  SETUP_ENV.sh  SIMPLE_WORKING_EXAMPLE.sh  START_EVERYTHING.sh  START_SERVER.sh  check_server_routes.py  check_server_status.sh  check_services.sh  docker-compose.dev.yml  fix_routes.sh  kill_and_restart.sh  pyproject.toml  pytest.ini  quick_start.sh  render.yaml  requirements-dev.txt  requirements.txt  restart.sh  restart_server.sh  start_minio.sh  start_server_fixed.sh  test_both_models.py  test_full_project.sh  test_full_project_python.py  test_gml_complete_ollama.sh  (+14 more)
alembic/: README.md  env.py
api/: index.py
docs/: AGENT_INITIALIZATION_IMPLEMENTATION.md  ALEMBIC_SETUP.md  ANALYTICS_FIX.md  BACKEND_FIX_COMPLETE.md  BATCH_OPERATIONS_IMPLEMENTATION.md  CACHE_IMPLEMENTATION.md  CHAT_PROMPT_FLOW.md  CHAT_WITH_MEMORY_IMPLEMENTATION.md  CHECK_STORAGE_ROUTE.md  CLI_IMPLEMENTATION.md  COMPLETE_FIX.md  COMPLETE_FIX_INSTRUCTIONS.md  COMPLETE_GML_OLLAMA_SUMMARY.md  COMPLETE_OLLAMA_SETUP.md  COMPLETE_SETUP.md  COMPLETE_SUCCESS.md  COMPLETE_TESTING_GUIDE.md  COMPLETE_TEST_REPORT.md  CONTRIBUTING.md  CONVERSATION_CONTEXT_IMPLEMENTATION.md  DOCKER_VERIFICATION.md  ENV_SETUP.md  FINAL_ANSWER.md  FINAL_FIX.md  FINAL_GML_OLLAMA_TEST.md  FINAL_OLLAMA_GUIDE.md  FINAL_STATUS.md  FIXED_AGENT_REGISTRATION.md  FIX_HEALTH_ENDPOINT.md  FIX_PORT_8000.md  FIX_STORAGE_ROUTE.md  GML_OLLAMA_COMPLETE_TEST.md  HEALTH_ENDPOINT_FIX_SUMMARY.md  HOW_IT_WORKS.md  HOW_TO_START_SERVER.md  INDEX.md  INSTALLATION_VERIFICATION.md  INSTALL_AND_START.md  LIVE_DATA_VERIFICATION.md  MEMORY_VERSIONING_IMPLEMENTATION.md  (+48 more)
examples/: config_usage.py  database_usage.py  security_usage.py
k8s/: hpa.yaml  (+3 more)
(+118 files in other folders)
