[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[project]
name = "gml"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

dependencies = [
  "fastapi==0.115.4",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.0",
  "sqlalchemy>=2.0.40",
  "asyncpg==0.30.0",
  "supabase==2.7.4",
  "alembic==1.16.5",
  "pinecone-client==5.0.0",
  "redis==5.2.0",
  "httpx==0.27.0",
  "cryptography==43.0.0",
  "prometheus-client==0.21.0",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "python-dotenv==1.0.1",
  "pyyaml==6.0.2",
  "python-dateutil==2.8.2",
  "pytz==2024.1",
  "openai>=1.0.0",
  "python-multipart>=0.0.6",
]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
]

[tool.pylint.format]
max-line-length = 100

[tool.coverage.run]
source = ["src/gml"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
